<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>
    <View
        android:layout_width="match_parent"
        android:background="@color/ctc_backgrount"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:layout_height="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:background="@mipmap/icon_complete"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textColor="#D9D9D9"
                android:text="------------"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:background="@mipmap/icon_2"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="60dp"
                android:gravity="center"
                android:layout_marginLeft="6dp"
                android:textColor="#D9D9D9"
                android:layout_marginRight="6dp"
                android:text="------------"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:background="@mipmap/icon_03"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/create_wallet"
                android:textSize="14sp"
                android:textColor="#2F5EB2"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/save_seed"
                android:layout_marginLeft="40dp"
                android:textSize="14sp"
                android:textColor="#2F5EB2"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/move_seed"
                android:textSize="14sp"
                android:layout_marginLeft="35dp"
                android:textColor="#BDBDBD"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/copy_wallet_now"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/ctc_textColor"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/copy_wallet_tip"
            android:textSize="16sp"
            android:textColor="@color/ctc_textColor"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:background="#2F5EB2"
            android:layout_marginTop="92dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/copy_wallet"
            android:textAllCaps="false"
            android:text="@string/copy_wallet"
            android:layout_height="44dp" />

    </LinearLayout>
</LinearLayout>
